[package]
name = "suibase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "suibase"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.23"
sui-types = { path = "../../../suibase/workdirs/active/sui-repo/crates/sui-types/" }
home = "0.5.4"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.23", features = ["build"] }

[features]
default = ["build-with-uniffi"]
build-with-uniffi = []