[package]
name = "sui-base-helper"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib","cdylib","staticlib"]

[dependencies]
# Built is done using the same workdir made active
# with sui-base 'asui'.
uniffi = { version = "0.23" }
sui = { path = "../../../sui-base/workdirs/active/sui-repo/crates/sui/" }
sui-sdk = { path = "../../../sui-base/workdirs/active/sui-repo/crates/sui-sdk/" }
sui-json-rpc-types = { path = "../../../sui-base/workdirs/active/sui-repo/crates/sui-json-rpc-types/" }
sui-keys = { path = "../../../sui-base/workdirs/active/sui-repo/crates/sui-keys/" }
sui-types = { path = "../../../sui-base/workdirs/active/sui-repo/crates/sui-types/" }
sui-adapter = { path = "../../../sui-base/workdirs/active/sui-repo/crates/sui-adapter/" }
shared-crypto = { path = "../../../sui-base/workdirs/active/sui-repo/crates/shared-crypto/" }

home = "0.5.4"
#serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"

futures = "0.3.25"

tokio = { version = "1.27", features = ["full"] }
telemetry-subscribers = { version = "0.2.0" }

anyhow = { version = "1.0.65", features = ["backtrace"] }
thiserror = "1.0.37"

# No upgrade to v4 until color are back.
clap = { version = "3.2.22", features = [
    "derive",
] }

colored = { version = "2.0.0" }

[build-dependencies]
uniffi = { version = "0.23", features = [ "build" ] }

[dev-dependencies.serial_test]
version = "=0.9.0" # Force a version known to be OK.
