[package]
name = "suibase"
version = "0.0.1"
edition = "2021"

license = "Apache-2.0"
description = "Crate to assist development, testing and deployment of Sui Move apps."
homepage = "https://suibase.io"
repository = "https://github.com/ChainMovers/suibase"
readme = "README.md"
keywords = ["sui","move"]
categories = ["development-tools"]

[lib]
crate-type = ["lib"]

[dependencies]
sui-types = { path = "../../../suibase/workdirs/active/sui-repo/crates/sui-types/" }
home = "0.5.4"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
