[package]
name = "suibase"
version = "0.0.1"
edition = "2021"

license = "Apache-2.0"
description = "Crate to assist development, testing and deployment of Sui Move apps."
homepage = "https://suibase.io"
repository = "https://github.com/ChainMovers/suibase"
readme = "README.md"
keywords = ["sui","move"]
categories = ["development-tools"]

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
sui-types = { path = "../../../suibase/workdirs/active/sui-repo/crates/sui-types/" }
home = "0.5.5"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_yaml = "0.8.26"
thiserror = "1.0.40"

[dev-dependencies]
env_logger = "0.10"
log = "0.4"