[workspace]
resolver = "2"
members = ["crates/suibase-daemon"]

[workspace.package]
# Bump 'version' for the suibase-daemon to self-restart after an update.
# (this is not the Suibase package version, it is specifically for this crate).
version = "0.0.3"
edition = "2021"

[workspace.dependencies]
data-encoding = "2.4.0"
chrono = "0.4.31" 
futures = "0.3.25"

jsonrpsee = { git = "https://github.com/wlmyng/jsonrpsee.git", rev = "b1b300784795f6a64d0fcdf8f03081a9bc38bde8", features = [
    "full",
    "http-client",
    "jsonrpsee-core",
] }
jsonrpsee-proc-macros = { git = "https://github.com/wlmyng/jsonrpsee.git", rev = "b1b300784795f6a64d0fcdf8f03081a9bc38bde8" }
md5 = "0.7"
schemars = { version = "0.8.10", features = ["either"] }
serde_with = { version = "2.1.0", features = ["hex"] }
serde_json = { version = "1.0.95", features = [
    "preserve_order",
    "arbitrary_precision",
] }
serde = { version = "1.0.144", features = ["derive", "rc"] }

tokio = { version = "1.28.1", features = ["full"] }
tokio-graceful-shutdown = "0.13"

tower = { version = "0.4.12", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.3.4", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }

uuid = { version = "1.4.1", features = ["v4","v7","fast-rng"] }
uuid7 = { version= "0.7.0", features = [ "uuid" ] }

anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0"

# No upgrade to v4 until color are back.
clap = { version = "3.2.22", features = ["derive"] }

colored = { version = "2.0.0" }
