[workspace]
resolver = "2"
members = ["crates/suibase-daemon",
           "crates/dtp-daemon",
           "crates/common",
           "crates/dtp-core",
           "crates/dtp-sdk"
          ]

[workspace.package]
# Bump 'version' for the daemon to self-restart after an update.
# (this is not the Suibase package version, it is specifically for the Rust crates).
version = "0.0.6"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
axum = { version = "0.6.6", default-features = false, features = [
  "headers",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
axum-extra = "0.4.2"
axum-server = { version = "0.5.1", default-features = false, features = [
  "tls-rustls",
] }
bcs = "0.1.4"
chrono = "0.4.31" 
clap = { version = "3.2.22", features = ["derive"] } # No upgrade to v4 until color are back.
colored = "2.0.0"
data-encoding = "2.4.0"
futures = "0.3.25"
hyper = { version = "0.14.20", features = ["full"] }
http-body = "0.4.5"
jsonrpsee = { version="0.22.5", features = [
    "full",
    "http-client",
    "jsonrpsee-core",
] }
jsonrpsee-proc-macros = { version = "0.22.5" }
jsonrpsee-types = { version = "0.22.5" }
md5 = "0.7"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
schemars = { version = "0.8.10", features = ["either"] }
serde_with = { version = "2.1.0", features = ["hex"] }
serde_json = { version = "1.0.95", features = [
    "preserve_order",
    "arbitrary_precision",
] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-graceful-shutdown = "0.14"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tower = { version = "0.4.12", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.3.4", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }
uuid = { version = "1.4.1", features = ["v4","v7","fast-rng"] }
uuid7 = { version= "0.7.0", features = [ "uuid" ] }
