[workspace]
resolver = "2"
members = ["crates/suibase-daemon",
           "crates/poi-server",
           "crates/common",
          ]

exclude = ["crates/dtp-daemon",
           "crates/dtp-core",
           "crates/dtp-sdk"
          ]

[workspace.package]
# Bump 'version' for the daemon to self-restart after an update.
# (this is not the Suibase package version, it is specifically for the Rust crates).
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
aes-gcm-siv = "0.11.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
arrayref = "0.3.9"
axum = { version = "0.7", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-server = { git = "https://github.com/bmwill/axum-server.git", rev = "f44323e271afdd1365fd0c8b0a4c0bbdf4956cb7", version = "0.6", default-features = false, features = [
    "tls-rustls",
] }
base64ct = "1.6.0"
bcs = "0.1.4"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.0.0"
data-encoding = "2.8.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
futures = "0.3.28"
http = "1"
http-body = "1"
http-body-util = "0.1.2"
hyper = "1"
hyper-util = "0.1.6"
hyper-rustls = { version = "0.27", default-features = false, features = [
    "webpki-roots",
    "http1",
    "http2",
    "ring",
    "tls12",
] }
jsonrpsee = { version = "0.24.7", features = ["server", "macros", "ws-client", "http-client", "jsonrpsee-core"] }
jsonrpsee-proc-macros = { version = "0.24.7" }
jsonrpsee-types = { version = "0.24.7" }
md5 = "0.7"
mime = "0.3"
once_cell = "1.19.0"
r2d2 = "0.8.0"
r2d2_sqlite = "0.27.0"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
schemars = { version = "0.8.22", features = ["either"] }
secrecy = "0.10.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = { version = "1.0.95", features = [
    "preserve_order",
    "arbitrary_precision",
] }
serde_with = "3.8"
static_assertions = "1.1.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "tls12",
    "ring",
] }
# For tokio-console support, add "tracing" to tokio features, add
# console-subscriber deps and modify config.toml for "--cfg tokio_unstable"
# Example:
# tokio = { version = "1.36.0", features = ["full","tracing"] }
# console-subscriber = "0.2.0"
tokio-graceful-shutdown = "0.16"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-util = "0.7.13"
tower = { version = "0.4.12", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }
tower-layer = "0.3.2"
uuid = { version = "1.15.0", features = ["v4","v7","fast-rng"] }
uuid7 = { version= "1.1.0", features = [ "uuid" ] }
zeroize = "1.8.1"
