# Cargo.toml documentation: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "sui-base-helper"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sui-sdk.workspace = true
colored.workspace = true
home = "0.5.4"
#serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
sui = { path = "../../../../workdirs/active/sui-repo/crates/sui/" }

[dev-dependencies]
serial_test.workspace = true
